--- a/static/css/account/base.css
+++ b/static/css/account/base.css
@@ -58,6 +58,7 @@ ol {
     margin:0;
     padding:0;
 }
+
 #header ul.menu li {
     float:left;
     padding:4px 10px;
@@ -71,6 +72,7 @@ ol {
 #header a {
     color:#f3f7cc;
 }
+
 #header a:hover {
     color:#fff;
 }
@@ -100,6 +102,7 @@ label {
     color:#333;
     margin-bottom:4px;
 }
+
 input, textarea {
     clear:both;
     float:left;
@@ -109,6 +112,7 @@ input, textarea {
     padding:6px 10px;
     font-size:14px;
 }
+
 input[type=submit], a.button {
     font-weight:bold;
     background:#12c064;
@@ -116,13 +120,16 @@ input[type=submit], a.button {
     padding:10px 20px;
     font-size:14px;
     text-transform:uppercase;
+    cursor: pointer;
 }
+
 .errorlist {
     color:#cc0033;
     float:left;
     clear:both;
     padding-left:10px;
 }
+
 .helptext {
     margin:0 0 20px 0;
     color:#aaa;
@@ -130,6 +137,7 @@ input[type=submit], a.button {
     float:left;
     font-size:13px;
 }
+
 /* messages */
 ul.messages {
     margin:10px 100px;
@@ -137,6 +145,7 @@ ul.messages {
     list-style-type:
     none;
 }
+
 ul.messages li.success,
 ul.messages li.warning,
 ul.messages li.error,
@@ -176,17 +185,20 @@ ul.messages li a.close {
 .social {
     float:right;
 }
+
 .social li {
     list-style:none;
     padding:10px 20px;
     margin:0 0 10px 0;
 }
+
 .social li a {
     width:100%;
     height:100%;
     display:block;
     color:#fff;
 }
+
 .social li.facebook { background:#3b5399; }
 .social li.twitter { background:#00cffa; }
 .social li.google { background:#de1710; }
@@ -199,11 +211,13 @@ ul.messages li a.close {
     float:left;
     margin:0 20px 20px 0;
 }
+
 .image-detail { margin-top:20px; }
 .image-info div {
     padding:20px 0;
     overflow:auto;
 }
+
 .count {
     color:#aaa;
     border:3px solid #bbb;
@@ -211,6 +225,7 @@ ul.messages li a.close {
     padding:10px 20px;
     margin:20px 10px 0;
 }
+
 a.like, a.follow { float:right; margin-top:-8px; }
 
 #image-list { overflow:hidden; }
@@ -222,6 +237,7 @@ a.like, a.follow { float:right; margin-top:-8px; }
     border-top:8px solid #12c064;
     background:#eee;
 }
+
 #image-list img { width:220px; height:220px; }
 #image-list .info { padding:10px; }
 #image-list .info a { color:#333; }
@@ -231,6 +247,7 @@ a.like, a.follow { float:right; margin-top:-8px; }
     padding:10px;
     text-align:center;
 }
+
 .image-likes img {
     width:120px;
     height:120px;
@@ -244,22 +261,26 @@ a.like, a.follow { float:right; margin-top:-8px; }
     border-radius:50%;
     margin-bottom:20px;
 }
+
 #people-list .user {
     width:180px;
     float:left;
     overflow:auto;
     padding:10px;
 }
+
 #people-list .info { text-align:center; }
 img.user-detail {
     border-radius:50%;
     float:left;
 }
+
 .profile-info {
     float:left;
     overflow:auto;
     margin-right:20px;
 }
+
 .image-container { margin-top:40px; }
 
 /* actions */
@@ -267,10 +288,12 @@ img.user-detail {
     clear:both;
     overflow:auto;
 }
+
 .action .images {
     float:left;
     margin:0 10px 10px 0;
 }
+
 .action .date {
     font-style:italic;
     color:#ccc;
