--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}
     Dashboard
@@ -6,8 +7,17 @@
 
 {% block content %}
     <h1>Dashboard</h1>
+    {% with total_images_created=request.user.images_created.count %}
+        <p>
+            Welcome to your dashboard. You have bookmarked {{ total_images_created }} image{{ total_images_created|pluralize }}.
+        </p>
+    {% endwith %}
+    <p>Drag the following button to your bookmarks toolbar to bookmark images from other websites →
+        <a href="javascript:{% include 'js/bookmarklet_launcher.js' %}" class="button">
+            Bookmark it
+        </a>
+    </p>
     <p>
-        Welcome to your dashboard.
         You can
         <a href="{% url 'edit' %}">edit your profile</a>
         or
