templates/base.html: DOMContentLoaded 이벤트 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,5 +52,12 @@
             {% endfor %}
         </ul>
     {% endif %}
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // DOM loaded
+            {% block domready %}
+            {% endblock %}
+        })
+    </script>
 </body>
 </html>
