--- a/templates/images/list_images.html
+++ b/templates/images/list_images.html
@@ -2,7 +2,7 @@
 {% for image in images %}
     <div class="image">
         <a href="{{ image.get_absolute_url }}">
-            {% thumbnail image.image 300x300 crop="smart" as im %}
+            {% thumbnail image.image 300x300 crop="smart" as image_thumbnail %}
             <a href="{{ image.get_absolute_url }}">
                 <img src="{{ image_thumbnail.url }}" alt="thumbnail">
             </a>
