templates/account/dashboard.html: action 목록 추가

--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -17,6 +17,12 @@
             Bookmark it
         </a>
     </p>
+    <h2>What's happening</h2>
+    <div id="action-list">
+        {% for action in actions %}
+            {% include "actions/detail.html" %}
+        {% endfor %}
+    </div>
     <p>
         You can
         <a href="{% url 'edit' %}">edit your profile</a>
