--- a/templates/payment/process.html
+++ b/templates/payment/process.html
@@ -30,9 +30,28 @@
                     <td class="num">${{ item.get_cost }}</td>
                 </tr>
             {% endfor %}
-            <tr class="total">
+            {% if order.coupon %}
+                <tr class="subtotal">
+                    <td>Subtotal</td>
+                    <td colspan="3"></td>
+                    <td class="num">
+                        ${{ order.get_total_cost_before_discount|floatformat:2 }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        {{ order.coupon.code }}" coupon
+                        ({{ order.discount }}% off)
+                    </td>
+                    <td colspan="3"></td>
+                    <td class="num neg">
+                        - ${{ order.get_discount|floatformat:2 }}
+                    </td>
+                </tr>
+            {% endif %}
+            <tr>
                 <td colspan="4">합계</td>
-                <td class="num">${{ order.get_total_cost }}</td>
+                <td class="num">${{ order.get_total_cost|floatformat:2 }}</td>
             </tr>
         </tbody>
     </table>
