--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -8,11 +8,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>
-        {% block title %}
-            My shop
-        {% endblock title %}
-    </title>
+    <title>{% block title %}{% trans 'base.html' %}{% endblock title %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/shop/base.css' %}">
 </head>
 <body>
@@ -23,18 +23,29 @@
     {% get_language_info_list for LANGUAGES as languages %}
     <div class="languages">
         <p>{% trans "Language" %}:</p>
-        <ul class="languages">
+        <div class="dropdown z-3 position-absolute">
             {% for language in languages %}
-                <li>
-                    <a href="/{{ language.code }}" {% if language.code == LANGUAGE_CODE %} class="selected" {% endif %}>
+                {% if language.code == LANGUAGE_CODE %}
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                         {{ language.name_local }}
-                    </a>
-                </li>
+                    </button>
+                {% endif %}
             {% endfor %}
-        </ul>
+            <ul class="dropdown-menu">
+                {% for language in languages %}
+                    <li>
+                        <a class="dropdown-item {% if language.code == LANGUAGE_CODE %} active {% endif %}"
+                           href="/{{ language.code }}/">
+                            {{ language.name_local }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
 </div>
-<div id="subheader">
+<div id="subheader" class="mt-2">
     <div class="cart">
         {% with total_items=cart|length %}
             {% if total_items > 0 %}
