--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load static %}
 {% load blog_tags %}
 
@@ -7,6 +8,7 @@
 <head>
     <title>
         {% block title%}
+            {% trans 'base.html' %}
         {% endblock %}
     </title>
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
@@ -28,9 +30,9 @@
                 Subscribe to my RSS feed
             </a>
         </p>
-        <h3>Latest posts</h3>
+        <h3>{% trans "title_latest_posts" %}</h3>
         {% show_latest_posts 3 %}
-        <h3>Most commented posts</h3>
+        <h3>{% trans "title_most_commented_post" %}</h3>
         {% get_most_commented_posts as most_commented_posts %}
         <ul>
             {% for post in most_commented_posts %}
