--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load i18n %}
 {% load blog_tags %}
 
 {% block title %}
@@ -12,9 +13,7 @@
     </p>
     {{ post.body|markdown }}
     <p>
-        <a href="{% url 'blog:post_share' post.id %}">
-            Share this post
-        </a>
+        <a href="{% url 'blog:post_share' post.id %}" class="card-link">{% trans "link_share" %}</a>
     </p>
     <h2>Similar posts</h2>
     {% for post in similar_posts %}
