--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load i18n %}
 {% load blog_tags %}
 
 {% block title %}
@@ -6,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>My Blog</h1>
+    <h1>{% trans "title_list" %}</h1>
 
     {% if tag %}
         <h2>Posts tagged with "{{ tag.name }}"</h2>
