templates/registration/login: 네이버 소셜 로그인 기능 추가

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -39,6 +39,12 @@
                     Sign in with Google
                 </a>
             </li>
+            <li class="list-group-item col-12 justify-content-end">
+                {#  소셜 로그인 네이버  #}
+                <a class="btn btn-success" href="{% url 'social:begin' 'naver' %}">
+                    Sign in with Naver
+                </a>
+            </li>
         </ul>
     </div>
 {% endblock %}
